--- a/htmlcss/기초/01~05.html
+++ b/htmlcss/기초/01~05.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="/htmlcss/css/main.css" rel="stylesheet" />
+    <link href="./css/01~05.css" rel="stylesheet" />
   </head>
   <body>
     <img src="/htmlcss/img/moon.png" class="profile" />
