clear:both 관련 속성

--- a/htmlcss/기초/07_layout_q.html
+++ b/htmlcss/기초/07_layout_q.html
@@ -17,7 +17,7 @@
             <p class="time">1 시간 전</p>
           </div>
         </div>
-
+        <div style="clear: both"></div>
         <div class="bottom-content">
           <h4 style="margin: 5px">4k 빔프로젝터 가성비 최강으로 선택했어요</h4>
           <p class="con">
