--- a/htmlcss/기초/09_layout2.html
+++ b/htmlcss/기초/09_layout2.html
@@ -24,12 +24,11 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem aliquid, libero ut distinctio tempora labore
       ipsum tempore quae atque consectetur dolores, sapiente sumque animi provident.</p>
   </div>
-  <br>
-  <div class="box1" style="padding: 50px;">
-    <h4>How we design our shoes</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem aliquid, libero ut distinctio tempora labore
-      ipsum tempore quae atque consectetur dolores, sapiente sumque animi provident.</p>
-  </div>
+
+  <form>
+    <input type="text" class="text-input">
+  </form>
+
 </body>
 
 </html>
