--- a/htmlcss/중급/01_index.html
+++ b/htmlcss/중급/01_index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link href="./css/01_index.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/01_index.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body style="margin: 0px;">
@@ -30,6 +31,30 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem aliquid, libero ut distinctio tempora labore
       ipsum tempore quae atque consectetur dolores, sapiente sumque animi provident.</p>
   </div>
+
+  <div class="box2">
+    <div class="fast">
+      <i class="fa-solid fa-cart-shopping fa-3x"></i>
+      <h3>Fast Shipping</h3>
+      <p>lorem lpsum</p>
+    </div>
+    <div class="good">
+      <i class="fa-solid fa-face-smile fa-3x"></i>
+      <h3>Good Service</h3>
+      <p>lorem lpsum</p>
+    </div>
+    <div class="free">
+      <i class="fa-solid fa-ticket fa-3x"></i>
+      <h3>Free Coupons</h3>
+      <p>lorem lpsum</p>
+    </div>
+    <div class="new">
+      <i class="fa-sharp fa-solid fa-shirt fa-3x"></i>
+      <h3>New Products</h3>
+      <p>lorem lpsum</p>
+    </div>
+  </div>
+
 </body>
 
 </html>
