--- a/htmlcss/중급/01_index.html
+++ b/htmlcss/중급/01_index.html
@@ -55,6 +55,25 @@
     </div>
   </div>
 
+  <div class="shop-bg">
+    <div class="shop-container">
+      <div class="shop-item">
+        <div class="overlay-wrap">
+          <div class="overlay-black">
+            <span>$60</span>
+          </div>
+        </div>
+        <img src="img/image2.jpg">
+      </div>
+      <div class="shop-item">
+        <img src="img/image3.jpg">
+      </div>
+      <div class="shop-item">
+        <img src="img/image4.jpg">
+      </div>
+    </div>
+  </div>
+  <div></div>
 </body>
 
 </html>
