--- a/firebase/public/upload.html
+++ b/firebase/public/upload.html
@@ -56,7 +56,7 @@
     </div>
   </nav>
 
-  <div class="container mt-3">
+  <div class="container">
     <input type="text" class="form-control mt-2" id="title" placeholder="title">
     <textarea class="form-control mt-2" id="content">content</textarea>
     <input type="text" class="form-control mt-2" id="price" placeholder="price">
@@ -89,8 +89,47 @@
 
 <script>
   const db = firebase.firestore();
-  // db.collection('products').doc('상품3').set({제목 : '변기'})
-  // db.collection('products').add({제목 : '변기2'})
+  const storage = firebase.storage();
+
+  $('#send').click(function () {
+    var file = document.querySelector('#image').files[0];
+
+    var storageRef = storage.ref();
+    var 저장할경로 = srorageRef.child('image/' + file.name);
+    var 업로드작업 = 저장할경로.put(file);
+
+    업로드작업.on('state_changed',
+      // 변화시 동작하는 함수 (업로드중)
+      null,
+      //에러시 동작하는 함수
+      (error) => {
+        console.error('실패사유는', error);
+      },
+      // 성공시 동작하는 함수
+      () => {
+        // 파이어베이스에서 url 가져오는 함수
+        업로드작업.snapshot.ref.getDownloadURL().then((url) => {
+          imgUrl = url
+          console.log('업로드된 경로는', url);
+
+          var 저장할거 = {
+            제목: $('#title').val(),
+            가격: $('#price').val(),
+            내용: $('#content').val(),
+            날짜: new Date(),
+            이미지: imgUrl
+          }
+          db.collection('products').add(저장할거).then((result) => {
+            // 성공시 실행할거~~
+            window.location.href = '/index.html'
+          }).catch((error) => {
+            // 실패시 실행할거~~
+          })
+        });
+      }
+    );
+
+  });
 
 </script>
 
