--- a/firebase/public/detail.html
+++ b/firebase/public/detail.html
@@ -38,7 +38,17 @@
   </nav>
 
   <div class="container">
-  </div>
+    상세페이지임 
+    <div class="detail-pic my-4" style="background-image: url('https://placeimg.com/640/380/tech');"></div>
+    <div>
+      <h5>올린사람 : 모름</h5>
+      <hr>
+      <h5 class="title">상품명</h5>
+      <p class="date">올린날짜</p>
+      <p class="price">가격</p>
+    </div>
+</div>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -65,19 +75,13 @@
 
 <script>
   const db = firebase.firestore();
-  db.collection('products').get().then((결과) => {
-    결과.forEach((doc) => {
-      var 템플릿 = `<div class="product">
-      <div class="thumbnail" style="background-image: url('${doc.data().이미지}')"></div>
-      <div class="flex-grow-1 p-4">
-        <h5 class="title"><a href="./detail.html?id=${doc.id}">${doc.data().제목}</a></h5>
-        <p class="date">${doc.data().날짜}</p>
-        <p class="price">${doc.data().가격}원</p>
-        <p class="float-end">🤍0</p>
-      </div>
-      </div>`;
-      $('.container').append(템플릿)
-    })
+  const storage = firebase.storage();
+  var 쿼리스트링 = new URLSearchParams(window.location.search)
+
+  db.collection('products').doc(쿼리스트링.get('id')).get().then((result)=>{
+    $('.title').text(result.data().제목);
+    $('.date').text(result.data().날짜);
+    $('.price').text(result.data().가격);
   })
 </script>
 
