--- a/firebase/public/chat.html
+++ b/firebase/public/chat.html
@@ -41,13 +41,32 @@
     </div>
   </nav>
 
-  <div class="container">
-    <input type="text" class="form-control mt-2" id="title" placeholder="title">
-    <textarea class="form-control mt-2" id="content"></textarea>
-    <input type="text" class="form-control mt-2" id="price" placeholder="price">
-    <input class="form-control mt-2" type="file" id="image">
-    <button class="btn btn-danger mt-3" id="send">올리기</button>
+  <div class="container p-4 detail">
+    <div class="row">
+      <div class="col-3 p-0">
+        <ul class="list-group chat-list">
+          <li class="list-group-item">
+            <h6>채팅방1</h6>
+            <h6 class="text-small">채팅방아이디</h6>
+          </li>
+        </ul>
+      </div>
+      <div class="col-9 p-0">
+        <div class="chat-room">
+          <ul class="list-group chat-content">
+            <li><span class="chat-box">채팅방1 내용</span></li>
+            <li><span class="chat-box">채팅방1 내용</span></li>
+            <li><span class="chat-box mine">채팅방1 내용</span></li>
+          </ul>
+          <div class="input-group">
+            <input class="form-control" id="chat-input">
+            <button class="btn btn-secondary" id="send">전송</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -76,49 +95,46 @@
   const db = firebase.firestore();
   const storage = firebase.storage();
 
+  var 내uid = JSON.parse(localStorage.getItem('user')).uid;
+  var 문서아이디
+  var 채팅방id;
+
+  db.collection('chatroom').where('who', 'array-contains', 내uid).get().then((result) => {
+    result.forEach((a) => {
+      var template = `
+        <li class="list-group-item">
+          <h6>${a.data().product}</h6>
+          <h6 class="text-small">${a.id}</h6>
+        </li>`
+      $('.chat-list').append(template)
+      $('.list-group-item').click(function () {
+        채팅방id = $(this).children('.text-small').text()
+
+        // e.stopImmediatePropagetion(); // 이벤트 버블링 막아주는 코드
+
+        db.collection('chatroom').doc(채팅방id).collection('messages').orderBy('date', 'asc').onSnapshot(
+          (result) => {
+            $('.chat-content').html('');
+            result.forEach((a) => {
+              var 템플릿 = `<li><span class="chat-box">${a.data().content}</span></li>`;
+              $('.chat-content').append(템플릿)
+            })
+          }
+        )
+      })
+    })
+  })
+
+
+
   $('#send').click(function () {
-    console.log(JSON.parse(localStorage.getItem('user')))
-    var file = document.querySelector('#image').files[0];
-
-    var storageRef = storage.ref();
-    var 저장할경로 = storageRef.child('image/' + file.name);
-    var 업로드작업 = 저장할경로.put(file);
-
-    업로드작업.on('state_changed',
-      // 변화시 동작하는 함수 (업로드중)
-      null,
-      //에러시 동작하는 함수
-      (error) => {
-        console.error('실패사유는', error);
-      },
-      // 성공시 동작하는 함수
-      () => {
-        // 파이어베이스에서 url 가져오는 함수
-        업로드작업.snapshot.ref.getDownloadURL().then((url) => {
-          imgUrl = url
-          console.log('업로드된 경로는', url);
-
-          var 저장할거 = {
-            제목: $('#title').val(),
-            가격: $('#price').val(),
-            내용: $('#content').val(),
-            날짜: new Date(),
-            이미지: imgUrl,
-            uid: JSON.parse(localStorage.getItem('user')).uid,
-            이름: JSON.parse(localStorage.getItem('user')).displayName
-          };
-          
-          db.collection('products').add(저장할거).then((result) => {
-            // 성공시 실행할거~~
-            window.location.href = '/index.html'
-          }).catch((error) => {
-            // 실패시 실행할거~~
-          })
-        });
-      }
-    );
-
-  });
+    var 데이터 = {
+      content: $('#chat-input').val(),
+      date: new Date(),
+      uid: 내uid,
+    }
+    db.collection('chatroom').doc(채팅방id).collection('messages').add(데이터)
+  })
 
 </script>
 
