--- a/firebase/public/edit.html
+++ b/firebase/public/edit.html
@@ -33,6 +33,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./detail.html">detail</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./chat.html">chat</a>
+          </li>
         </ul>
       </div>
     </div>
