--- a/firebase/public/index.html
+++ b/firebase/public/index.html
@@ -15,7 +15,6 @@
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="./index.html">하찌마켓</a>
-      <span id="userName"></span>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,6 +32,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./detail.html">detail</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./chat.html">chat</a>
           </li>
         </ul>
       </div>
